--- a/S1P04/S1P04/HTMLpages/Person01.html
+++ b/S1P04/S1P04/HTMLpages/Person01.html
@@ -43,12 +43,13 @@
             <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="/Home/Index">MAIN</a></li>
-					<li class="nav-item"><a class="nav-link" href="Person01.html">Person 1</a></li>
-					<li class="nav-item"><a class="nav-link" href="Person02.html">Person 2</a></li>
-					<li class="nav-item"><a class="nav-link" href="Person03.html">Person 3</a></li>
-					<li class="nav-item"><a class="nav-link" href="Person04.html">Person 4</a></li>
-					<li class="nav-item"><a class="nav-link" href="Person05.html">Person 5</a></li>
-					<li class="nav-item"><a class="nav-link" href="javascript:history.back()">BACK</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/People/ListPeople">LIST</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Person01.html">Person 1</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Person02.html">Person 2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Person03.html">Person 3</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Person04.html">Person 4</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Person05.html">Person 5</a></li>
+                    <li class="nav-item"><a class="nav-link" href="javascript:history.back()">BACK</a></li>
                 </ul>
             </div>
         </nav>
